--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -2,8 +2,8 @@ name: Auto Commit
 
 on:
   schedule:
-    - cron: '0 5 * * *' # Runs every day at 5 AM UTC
-  workflow_dispatch: # allows manual trigger
+    - cron: '0 5 * * *'
+  workflow_dispatch: 
 
 jobs:
   build:
