--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           github_user_name: jaiswaldhiraj
           outputs: dist/snake.svg
+          palette: github-dark
 
       - name: Push snake animation to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
