--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,11 +13,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Generate snake animation
-        uses: Platane/snk@v3
         with:
           github_user_name: jaiswaldhiraj
           outputs: dist/snake.svg
-          palette: github-dark
+          palette: dracula
 
       - name: Push snake animation to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
