--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,7 +1,7 @@
 name: Generate Snake
 
 on:
-  schedule: # Runs every 12 hours
+  schedule:
     - cron: "0 */12 * * *"
   workflow_dispatch:
 
@@ -17,7 +17,7 @@ jobs:
         with:
           github_user_name: jaiswaldhiraj
           outputs: dist/snake.svg
-          palette: github-dark
+          palette: '{"background":"#000000","snake":"#00FF00","food":"#FF00FF"}'
 
       - name: Push snake animation to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
