--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -3,12 +3,11 @@ name: Generate Snake
 on:
   schedule: # Runs every 12 hours
     - cron: "0 */12 * * *"
-  workflow_dispatch: # Allow manual trigger
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -16,12 +15,10 @@ jobs:
       - name: Generate snake animation
         uses: Platane/snk@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+          github_user_name: jaiswaldhiraj
+          outputs: dist/snake.svg
 
-      - name: Push to output branch
+      - name: Push snake animation to output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
